--- a/app/views/sports/index.html.slim
+++ b/app/views/sports/index.html.slim
@@ -18,11 +18,10 @@ table
 
 br
 
-= link_to "Export EXCEL", export_sports_path
-
+= link_to "Export EXCEL", export_excel_sports_path
 br
 
-= link_to "Download", "/home/app/akinasport/public/export.xlsx"
+= link_to "Export CSV", export_csv_sports_path
 
 br
 
