Add nominale field to questions + start Entity
[33]

--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -9,4 +9,8 @@
   .field
     = f.label :title
     = f.text_field :title
+  .field
+    = f.label :nominal
+    = f.text_field :nominal
+
   .actions = f.submit
