drop table sport
[85]

--- a/app/views/entities/index.html.slim
+++ b/app/views/entities/index.html.slim
@@ -1,9 +1,51 @@
-h1= "Listing #{@entity_class ? @entity_class :  "all"} entities"
+- if @entity_class
+  h2= "Liste des entités de la base de connaissance #{@entity_class}"
 
-br
-hr
+  br
+  
+  = link_to "Nouveau #{@entity_class}", new_entity_path(entity_class: @entity_class)
 
-- unless @entity_class
+  br
+  br
+  
+  table
+    thead
+      tr
+        th Nom
+        th
+        th
+        th
+
+    tbody
+      - @entities.each do |entity|
+        tr
+          td = entity.name
+          td = link_to 'Edit', edit_entity_path(entity, entities_class: @entities_class)
+          td = link_to 'Destroy', entity, data: {:confirm => 'Are you sure?'}, :method => :delete
+
+  br
+
+  = link_to "Export EXCEL", export_excel_entities_path(entity_class: @entity_class)
+  br
+
+  = link_to "Export CSV", export_csv_entities_path(entity_class: @entity_class)
+
+- else
+  
+  h2 Liste des bases de connaissances disponibles
+
+  table
+    thead
+      tr
+        th Bases de connaissances
+    tbody
+      - @entities_class.each do |entity_class|
+        tr
+          td= link_to entity_class, entities_path(entity_class: entity_class)
+
+  br
+  hr
+
   h2 Importer une nouvelle base de connaissances
 
   br
@@ -14,50 +56,4 @@ hr
       label Fichier CSV
       = file_field_tag 'entity[csv_file]', accept: 'text/csv'
       = submit_tag "Importer"
-      
-  br
-  hr
-
-- if @entity_class
-  table
-    thead
-      tr
-        th Name
-        th
-        th
-        th
-
-    tbody
-      - @entities.each do |entity|
-        tr
-          td = entity.name
-          td = link_to 'Show', entity
-          td = link_to 'Edit', edit_entity_path(entity)
-          td = link_to 'Destroy', entity, data: {:confirm => 'Are you sure?'}, :method => :delete
-
-  br
-
-  = link_to "Export EXCEL", export_excel_entities_path(entity_class: @entity_class)
-  br
-
-  = link_to "Export CSV", export_csv_entities_path(entity_class: @entity_class)
-
-  br
-
-  = link_to 'New Entity', new_entity_path(entity_class: @entity_class)
-  
-
-- else 
-
-  h2 Liste des bases de connaissances disponibles
-  
-  table
-    thead
-      tr
-        th Bases de connaissances
-    tbody
-      - @entities_class.each do |entity_class|
-        tr
-          td= link_to entity_class, entities_path(entity_class: entity_class)
-
-    
+        
