Add entity_class to answer
[1685]

--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -7,8 +7,8 @@
           li = message
 
   .field
-    = f.label :sport_id
-    = f.number_field :sport_id
+    = f.label :entity_id
+    = f.number_field :entity_id
   .field
     = f.label :question_id
     = f.number_field :question_id
