--- a/app/views/answers/show.html.slim
+++ b/app/views/answers/show.html.slim
@@ -1,8 +1,8 @@
 p#notice = notice
 
 p
-  strong Sport:
-  = @answer.sport_id
+  strong Entité:
+  = @answer.entity_id
 p
   strong Question:
   = @answer.question_id
