--- a/app/views/entities/index.html.slim
+++ b/app/views/entities/index.html.slim
@@ -23,7 +23,7 @@
       - @entities.each do |entity|
         tr
           td = entity.name
-          td = link_to 'Edit', edit_entity_path(entity, entities_class: @entities_class)
+          td = link_to 'Edit', edit_entity_path(entity, entitiy_class: @entities_class)
           td = link_to 'Destroy', entity, data: {:confirm => 'Are you sure?'}, :method => :delete
 
   br
